# analyze_managers

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
analyze_managers/: config.py
analyze_managers/calculate/: calculate_response_times.py  calculate_response_times.sql
analyze_managers/data/: db.py  make_dataset.py  prepere_dataset.py
analyze_managers/util/: date_time_util.py
notebooks/reports/: 0.1-alena-calculate_managers_response_times.ipynb  0.2-alena-calculate_managers_response_times_SQL.ipynb
