[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "analyze_managers"
version = "0.0.1"
description = "A project for analyzing manager response times in chat communications. Calculates and compares average response times using both SQL and Python implementations, helping evaluate manager performance and chat efficiency."
authors = [
  { name = "Alena Gorshunova" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.8"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["analyze_managers"]
force_sort_within_sections = true
